[package]
name = "cargo-llvm-lines"
version = "0.4.37"
authors = ["David Tolnay <dtolnay@gmail.com>", "Nicholas Nethercote <nnethercote@mozilla.com>"]
categories = ["development-tools::cargo-plugins", "development-tools::debugging"]
description = "Count the number of lines of LLVM IR across all instantiations of a generic function."
documentation = "https://github.com/dtolnay/cargo-llvm-lines"
edition = "2021"
keywords = ["cargo", "subcommand"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/cargo-llvm-lines"

[dependencies]
anstream = { version = "0.6.13", default-features = false }
anstyle = "1.0"
cargo-subcommand-metadata = "0.1"
clap = { version = "4", features = ["deprecated", "derive", "wrap_help"] }
is-terminal = "0.4"
regex = "1.9"
rustc-demangle = "0.1"
shlex = "1.3"
tempfile = "3.4"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
